Fix grid template

--- a/data/grid.yaml
+++ b/data/grid.yaml
@@ -32,7 +32,7 @@ nodes:
   - x: 0.0
     y: -0.0949999988
 
-element:
+elements:
   - indices: [ 0,  1,  5, 4 ] # 0
   - indices: [ 1,  2,  6, 5 ] # 1
   - indices: [ 2,  3,  7, 6 ] # 2
