--- a/data/data.yaml
+++ b/data/data.yaml
@@ -1,8 +1,16 @@
+conductivity: 25
+alpha: 300
+Tot: 1200
+Density: 7800 # ro
+SpecificHeat: 700 # c
+initialTemp: 100
 
+simulationTime: 500
+simulationStepTime: 50
 
 # For grid generation
-gridGeneration:
-    nodesX: 4
-    nodesY: 4
-    gridWidth: 4
-    gridHeight: 6i
+#gridGeneration:
+#  nodesX: 4
+#  nodesY: 4
+#  gridWidth: 4
+#  gridHeight: 6i
